--- a/book.bib
+++ b/book.bib
@@ -835,6 +835,13 @@ publisher={University of Prince Edward Island}
   publisher={Springer}
 }
 
+@misc{mayo2021statistical,
+  title={Statistical Inference as Severe Testing: How to Get beyond the Statistics},
+  author={Mayo-Wilson, Conor},
+  year={2021},
+  publisher={Duke University Press Durham, NC}
+}
+
 @book{mayo1996error,
   title={Error and the growth of experimental knowledge},
   author={Mayo, Deborah G},
