--- a/03-ScientificInference.Rmd
+++ b/03-ScientificInference.Rmd
@@ -339,7 +339,7 @@ This asymmetry forms the basics of Karl Popper's (1902-1994) falsificationism.
 ::: {data-latex=""}
 **Note for data scientists!**
 :::
-Importantly, we must note that **in statistical hypothesis testing, data do not logically falsify a hypothesis**; rather, they can provide a severe test of it  [@mayo2021statistical] (see Section \ref(bayesian-inference)). Falsification, in the strict Popperian sense, refers to universal (deterministic) hypotheses, i.e., those that can be refuted by a single counterexample. The kind of hypothesis that can be refuted by a single failed experiment is a universal hypothesis, or deterministic law-like hypothesis. Probabilistic statements like "The mean of population A equals that of population B" do not entail any single observation with logical necessity. Hence, no single data point can logically falsify such a hypothesis. We can only evaluate the hypothesis’ consistency with data.
+Importantly, we must note that **in statistical hypothesis testing, data do not logically falsify a hypothesis**; rather, they can provide a severe test of it  [@mayo2021statistical] (see Section \@ref(bayesian-inference)). Falsification, in the strict Popperian sense, refers to universal (deterministic) hypotheses, i.e., those that can be refuted by a single counterexample. The kind of hypothesis that can be refuted by a single failed experiment is a universal hypothesis, or deterministic law-like hypothesis. Probabilistic statements like "The mean of population A equals that of population B" do not entail any single observation with logical necessity. Hence, no single data point can logically falsify such a hypothesis. We can only evaluate the hypothesis’ consistency with data.
 ::::
 
 The process described by Popper is as follows:
@@ -395,7 +395,7 @@ Note the difference between *falsifiable* and *falsified*.
 > Falsification uses the valid inference modus tollens: if from a statement $P$ we logically deduce $Q$, but what is observed is $\lnot Q$, we infer that $P$ is false. For example, given the statement "all swans are white" and the initial condition "there is a swan here", we can deduce "the swan here is white", but if what is observed is "the swan here is not white" (say black), then "all swans are white" is false, or it was not a swan.
 ::::
 
-The take-away message from falsification is that despite proposing an unrealistically restrictive practice of science, it might be a useful inference method for scientists. However, they should be aware of its limitations and for instance, bear in mind the pitfalls of *ad-hoc* modifications. (See negative weight in phlogiston theory [@phlogiston]). An *ad-hoc* hypothesis is added to a theory to save it from being falsified. A modification is considered *ad-hoc* if it reduces the falsifiability of the hypothesis in question. Again, **remember that in statistical hypothesis testing, data do not logically falsify a hypothesis**; rather, they can provide a severe test of it [@mayo2021statistical] (see Section \ref(bayesian-inference)).
+The take-away message from falsification is that despite proposing an unrealistically restrictive practice of science, it might be a useful inference method for scientists. However, they should be aware of its limitations and for instance, bear in mind the pitfalls of *ad-hoc* modifications. (See negative weight in phlogiston theory [@phlogiston]). An *ad-hoc* hypothesis is added to a theory to save it from being falsified. A modification is considered *ad-hoc* if it reduces the falsifiability of the hypothesis in question. Again, **remember that in statistical hypothesis testing, data do not logically falsify a hypothesis**; rather, they can provide a severe test of it [@mayo2021statistical] (see Section \@ref(bayesian-inference)).
 
 ### Confirmation {#confirmation}
 
