--- a/04-EmpiricalPractices-and-Models.Rmd
+++ b/04-EmpiricalPractices-and-Models.Rmd
@@ -395,7 +395,7 @@ The following content is important for the mid-term exam. More examples will com
 ::::
 
 
-This tool should help you spotting what assumptions were made, how evidence was connected to theory, whether the conclusions follow logically. This program or tool, comes from the book "Understanding scientific reasoning" from Ronald N. Giere, John Bickle and Robert F. Mauldin [@giere2006understanding]. The following schema is a tool for evaluating whether a scientific model seems to fit the world, doesn’t fit, or remains uncertain. It is a systematic way to identify the main components:
+This tool should help you spotting what assumptions were made, how evidence was connected to theory, whether the conclusions follow logically. This program or tool, comes from the book "Understanding scientific reasoning" from Ronald N. Giere, John Bickle and Robert F. Mauldin [@giere2006understanding]. The following schema is a tool for evaluating whether a scientific model seems to fit the world, doesn’t fit, or remains uncertain. This **program for evaluating theoretical hypotheses** is a systematic way to identify the main components:
 
 - What is being studied.
 - What is the proposed model/theory.
