--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -2425,7 +2425,7 @@ The following content is important for the mid-term exam. More examples will com
 
 \end{notebox}
 
-This tool should help you spotting what assumptions were made, how evidence was connected to theory, whether the conclusions follow logically. This program or tool, comes from the book ``Understanding scientific reasoning'' from Ronald N. Giere, John Bickle and Robert F. Mauldin \citep{giere2006understanding}. The following schema is a tool for evaluating whether a scientific model seems to fit the world, doesn't fit, or remains uncertain. It is a systematic way to identify the main components:
+This tool should help you spotting what assumptions were made, how evidence was connected to theory, whether the conclusions follow logically. This program or tool, comes from the book ``Understanding scientific reasoning'' from Ronald N. Giere, John Bickle and Robert F. Mauldin \citep{giere2006understanding}. The following schema is a tool for evaluating whether a scientific model seems to fit the world, doesn't fit, or remains uncertain. This \textbf{program for evaluating theoretical hypotheses} is a systematic way to identify the main components:
 
 \begin{itemize}
 \tightlist
@@ -3178,7 +3178,7 @@ As can be seen, this value is closer to the degree of our synthetic data \texttt
 \end{Shaded}
 
 \begin{verbatim}
-## Estimated Effect (revised model): 10.095828768814414
+## Estimated Effect (revised model): 10.095828768814442
 \end{verbatim}
 
 \chapter{Experimental Control and Statistical Abuse}\label{stats-abuse}
